@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-22T08:30:13Z",
-  "count_outdated" : 247,
-  "uniques_outdated" : 58,
+  "timestamp" : "2022-07-28T02:07:40Z",
+  "count_outdated" : 249,
+  "uniques_outdated" : 59,
   "count" : 259,
   "uniques" : 61,
   "views" : [
-    {
-      "timestamp": "2022-07-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-18T00:00:00Z",
       "count": 4,
