@@ -1,12 +1,7 @@
 {
-  "count": 12,
-  "uniques": 3,
+  "count": 10,
+  "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-07-14T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-18T00:00:00Z",
       "count": 4,
